# gl-silabs-dfu

./: .gitignore  Makefile  README.md
src/: CMakeLists.txt
src/bgapi/: bgapi_main.c  bgapi_main.h  host_gecko.h  silabs_msg.c  silabs_msg.h
src/driver/: gl_hal.c  gl_hal.h  gl_uart.c  gl_uart.h
src/main/: CMakeLists.txt  main.c  xmodem.c  xmodem.h
src/uart-driver/: gl_hal.c  gl_uart.c
src/xmodem/: xmodem.c  xmodem_main.c  xmodem_main.h
